# gwi

./: AmplificationPlot.qml  CMakeLists.txt  DataManager.js  END.qml  IntensitySlider.qml  Main.qml  README.md  RawData.qml  Run.qml  SetupPage.qml  StandardCurve.qml  Summary.qml  datamanager.py  main.cpp
include/: ButtonHandler.hpp  DataManager.hpp  StateManager.hpp
resources/: example.yml  resources.qrc
src/: ButtonHandler.cpp  DataManager.cpp  StateManager.cpp  main.cpp
